--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "parcel-bundler": "^1.12.5",
     "sas": "^3.0.4",
     "sass": "^1.42.1"
+  },
+  "dependencies": {
+    "@parcel/transformer-sass": "^2.0.0-alpha.3"
   }
 }
