--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.42.1"
   },
   "dependencies": {
-    "@parcel/transformer-sass": "^2.0.0-alpha.3"
+    "@parcel/transformer-sass": "^2.0.0-alpha.3",
+    "nodejs": "^0.0.0"
   }
 }
