--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "sass": "^1.42.1"
   },
   "dependencies": {
-    "@parcel/transformer-sass": "^2.0.0-alpha.3",
-    "nodejs": "^0.0.0"
+    "@parcel/transformer-sass": "^2.0.0-alpha.3"
   }
 }
