--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
-    "start": "node src/index.html"
+    "start": "node ./index.js"
   },
   "author": "",
   "license": "ISC",
